--- a/index.html
+++ b/index.html
@@ -348,13 +348,12 @@
         </div> <!-- end of container -->
     </section> <!-- end of section -->
 
-    <!-- testimonial section -->
+    <!--
     <section class="section" id="testmonial">
         <div class="container text-center">
             <p class="section-subtitle">What Think Client About Me ?</p>
             <h6 class="section-title mb-6">Testmonial</h6>
 
-            <!-- row -->
             <div class="row">
                 <div class="col-md-6">
                     <div class="testimonial-card">
@@ -379,8 +378,8 @@
                     </div>
                 </div>
             </div>
-        </div> <!-- end of container -->
-    </section> <!-- end of testimonial section -->
+        </div>
+    </section>  -->
     
     <!-- blog section -->
     <section class="section" id="blog">
