some more changes

--- a/index.html
+++ b/index.html
@@ -78,7 +78,7 @@
                         <br>             
                     </p>
 
-                    <button class="btn-rounded btn btn-outline-primary mt-4"><a href="J:\Codebase\MyPortFolio\public_html\assets\Kaushal_Bhatt.pdf" download="">Download CV</a></button>
+                    <button class="btn-rounded btn btn-outline-primary mt-4"><a href="assets\Kaushal_Bhatt.pdf" download="">Download CV</a></button>
                 </div>              
             </div><!-- end of about wrapper -->
         </div><!-- end of container -->
