contact functionality added

--- a/index.html
+++ b/index.html
@@ -439,7 +439,7 @@
             <p class="section-subtitle">How can you communicate?</p>
             <h6 class="section-title mb-5">Contact Me</h6>
             <!-- contact form -->
-            <form action="https://docs.google.com/forms/d/e/1FAIpQLSePFCsgr0UL_6ueGIqaWCIHn9XMct2DIiduPi28n4_y74X6Lw/viewform?embedded=true" method="POST" class="contact-form col-md-10 col-lg-8 m-auto">
+            <form action="https://docs.google.com/forms/d/e/1FAIpQLSePFCsgr0UL_6ueGIqaWCIHn9XMct2DIiduPi28n4_y74X6Lw/viewform?usp=sf_link" method="POST" class="contact-form col-md-10 col-lg-8 m-auto">
                 <div class="form-row">
                     <div class="form-group col-sm-6">
                         <input type="text" size="50" class="form-control" placeholder="Your Name" name="entry.Name" required>
@@ -448,7 +448,7 @@
                         <input type="email" class="form-control" placeholder="Enter Email" name="entry.Email" requried>
                     </div>
                     <div class="form-group col-sm-6">
-                        <input type="number" class="form-control" placeholder="Phone Number" name="entry.Phone number" requried>
+                        <input type="number" class="form-control" placeholder="Phone Number" name="entry.Phone" requried>
                     </div>
                     <div class="form-group col-sm-12">
                         <textarea name="entry.message" id="comment" rows="6"   class="form-control" placeholder="Write Something"></textarea>
@@ -464,7 +464,7 @@
     <!-- footer -->
     <div class="container">
         <footer class="footer">       
-            <p class="mb-0">Copyright <script>document.write(new Date().getFullYear())</script> &copy; <a href="http://www.devcrud.com">Kaushal</a></p>
+            <p class="mb-0">Copyright <script>document.write(new Date().getFullYear())</script> &copy; <a href="">Kaushal</a></p>
             <div class="social-links text-right m-auto ml-sm-auto">
                 <a href="javascript:void(0)" class="link"><i class="ti-facebook"></i></a>
                 <a href="javascript:void(0)" class="link"><i class="ti-twitter-alt"></i></a>
