contact functionality added

--- a/index.html
+++ b/index.html
@@ -439,7 +439,7 @@
             <p class="section-subtitle">How can you communicate?</p>
             <h6 class="section-title mb-5">Contact Me</h6>
             <!-- contact form -->
-            <form action="https://docs.google.com/forms/d/e/1FAIpQLSePFCsgr0UL_6ueGIqaWCIHn9XMct2DIiduPi28n4_y74X6Lw/viewform?usp=sf_link" method="POST" class="contact-form col-md-10 col-lg-8 m-auto">
+            <form action="https://docs.google.com/forms/d/e/1FAIpQLSePFCsgr0UL_6ueGIqaWCIHn9XMct2DIiduPi28n4_y74X6Lw/formResponse" method="POST" class="contact-form col-md-10 col-lg-8 m-auto">
                 <div class="form-row">
                     <div class="form-group col-sm-6">
                         <input type="text" size="50" class="form-control" placeholder="Your Name" name="entry.Name" required>
